Syntax highlighting for buttons, style and alignment fixes for the demo

--- a/demo/src/demo.scss
+++ b/demo/src/demo.scss
@@ -2,17 +2,17 @@
     box-sizing: border-box;
 }
 
-h1, h2, h3, h4, p {
+body {
     font-family: "Open Sans";
     font-weight: 300;
 }
 
 h1, h2, h3, h4 {
-    margin: 1rem 0;
+    margin: 0 0 1rem 0;
 }
 
 p {
-    margin: 0.5rem 0;
+    margin: 0 0 0.5rem 0;
 }
 
 pre, code, .code-button {
@@ -22,36 +22,37 @@ pre, code, .code-button {
 
 hr {
     height: 0;
-    margin: 0 0 2rem 0;
+    margin: 0 0 1rem 0;
     border-top: 1px solid #282b2e;
     opacity: 0.5;
 
     &.separator {
-        margin: 2rem 0;
+        margin: 2rem 0 1.5rem 0;
     }
+}
+
+.hljs {
+    padding: 1rem;
 }
 
 .code-example {
     border: 1px solid #282b2e;
     padding: 1rem;
+    margin-bottom: 1rem;
 
-    + .code-example {
-        margin-top: 1rem;
+    :last-child {
+        margin-bottom: 0;
     }
 }
 
 .button-row {
-    margin-top: 1rem;
-
-    + .button-row {
-        margin-top: 0.5rem;
-    }
+    margin-bottom: 1rem;
 }
 
 .button {
     display: inline-block;
     margin: 0 0.5rem 0.5rem 0;
-    padding: 0.5em 1em;
+    padding: 1rem;
     background: #282b2e;
     color: #e0e2e4;
     cursor: pointer;
@@ -65,6 +66,15 @@ hr {
 
     &:active {
         opacity: 0.7;
+    }
+}
+
+.code-button {
+    pre {
+        margin: 0;
+    }
+    code {
+        padding: 0;
     }
 }
 
